<resources>
    <string name="app_name">宝可梦计划</string>
    <string name="app_img_name">宝可梦计划</string>

    <string name="main_pokemon_en">Pokémon</string>
    <string name="main_project_en">Project</string>
    <string name="main_pokedex">宝可梦图鉴</string>
    <string name="main_skill">招式</string>
    <string name="main_machine">技巧机</string>
    <string name="main_abilities">特性</string>
    <string name="main_item">道具</string>
    <string name="main_team">我的队伍</string>
    <string name="main_character">性格</string>
    <string name="main_place">地点</string>
    <string name="main_types">属性</string>
    <string name="main_about">关于</string>
    <string name="main_explanation">此应用是由玩家为玩家开发。本应用并非官方程序并非由任天堂、Game Freak或宝可梦公司支持或批准，或和以上公司相关。\n本应用所使用的图片有些受版权保护且为合理使用。宝可梦及宝可梦角色名称皆为任天堂的商标。无侵犯版权之意。</string>
    <string name="main_baseline">你已经看到了底线</string>

    <string name="poke_type_tag">属性标签</string>
    <string name="poke_type_table">属性相克表</string>
    <string name="poke_type_invalid">×</string>
    <string name="poke_type_double">2</string>
    <string name="poke_type_not_effective">½</string>
    <string name="poke_type_table_directory">守\n攻</string>
    <string name="poke_type_popup_attack">作为攻击方</string>
    <string name="poke_type_popup_defense">作为被攻击方</string>
    <string name="poke_type_popup_att_advantage">效果拔群：</string>
    <string name="poke_type_popup_poor">没啥效果：</string>
    <string name="poke_type_popup_att_invalid">完全无效：</string>
    <string name="poke_type_popup_def_weakness">吃瘪弱点：</string>
    <string name="poke_type_popup_def_advantage">防御优势：</string>
    <string name="poke_type_popup_def_full">完全防御：</string>

    <string name="poke_dex_gen_1">第一世代</string>
    <string name="poke_dex_gen_2">第二世代</string>
    <string name="poke_dex_gen_3">第三世代</string>
    <string name="poke_dex_gen_4">第四世代</string>
    <string name="poke_dex_gen_5">第五世代</string>
    <string name="poke_dex_gen_6">第六世代</string>
    <string name="poke_dex_gen_7">第七世代</string>
    <string name="poke_dex_gen_8">第八世代</string>
    <string name="poke_dex_gen_unknow">未知世代</string>

    <string name="poke_detail_base_stats">数据</string>
    <string name="poke_detail_abilities">特性</string>
    <string name="poke_detail_hide_abilities">隐藏特性</string>
    <string name="poke_detail_height">身高：</string>
    <string name="poke_detail_weight">体重：</string>
    <string name="poke_detail_hp">血量</string>
    <string name="poke_detail_attack">攻击</string>
    <string name="poke_detail_defense">防御</string>
    <string name="poke_detail_special_attack">特攻</string>
    <string name="poke_detail_special_defense">特防</string>
    <string name="poke_detail_speed">速度</string>
    <string name="poke_detail_ability_sum">种族值总和：</string>


</resources>