<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/color_fefefe"
    android:orientation="vertical"
    android:padding="10dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/poke_type_popup_attack"
        android:textColor="@color/color_010101"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/poke_type_popup_att_advantage"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/att_advantage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/color_909090"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="无" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/poke_type_popup_poor"
            android:textColor="@color/color_d04741"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/att_poor_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/color_909090"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="无" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/poke_type_popup_att_invalid"
            android:textColor="@color/color_010101"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/att_invalid_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/color_909090"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="无" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="20dp"
        android:text="@string/poke_type_popup_defense"
        android:textColor="@color/color_010101"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/poke_type_popup_def_weakness"
            android:textColor="@color/color_d04741"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/def_weakness_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/color_909090"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="无" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/poke_type_popup_def_advantage"
            android:textColor="@color/green"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/def_advantage_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/color_909090"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="无" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/poke_type_popup_def_full"
            android:textColor="@color/color_010101"
            android:textSize="16sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/def_full_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:textColor="@color/color_909090"
            android:textSize="16sp"
            android:textStyle="bold"
            tools:text="无" />

    </LinearLayout>


</LinearLayout>