<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/app_bar_layout"
        android:layout_width="match_parent"
        android:layout_height="200dp">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:minHeight="?actionBarSize"
            app:collapsedTitleGravity="center"
            app:contentScrim="@color/color_d04741"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <FrameLayout
                android:id="@+id/collapsing_zone_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_d04741"
                app:layout_collapseMode="parallax"
                app:layout_collapseParallaxMultiplier="0.5">

                <ImageView
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_gravity="center_vertical|end"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="-50dp"
                    android:contentDescription="@string/app_img_name"
                    android:src="@drawable/ic_pokeball" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="30dp"
                    android:layout_marginBottom="55dp"
                    android:text="@string/main_pokemon_en"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginStart="120dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/main_project_en"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:contentInsetStart="0dp"
                app:layout_collapseMode="pin">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.lodz.android.pandora.widget.base.TitleBarLayout
                        android:id="@+id/title_bar_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:isNeedBackBtn="false"
                        app:titleBarBackground="@color/transparent"
                        app:titleText="@string/app_name"
                        app:titleTextColor="@color/white">

                    </com.lodz.android.pandora.widget.base.TitleBarLayout>
                </FrameLayout>

            </androidx.appcompat.widget.Toolbar>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <FrameLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp">

                <com.google.android.material.imageview.ShapeableImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:shapeAppearanceOverlay="@style/cornerImageStyle"
                    app:srcCompat="@drawable/ic_pokedex" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom|end"
                    android:text="@string/main_pokemon_en"
                    android:textColor="@color/white"
                    android:textSize="25sp"
                    android:textStyle="bold" />
            </FrameLayout>


            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:shapeAppearanceOverlay="@style/cornerImageStyle"
                app:srcCompat="@drawable/ic_skill" />

            <com.google.android.material.imageview.ShapeableImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                app:shapeAppearanceOverlay="@style/cornerImageStyle"
                app:srcCompat="@drawable/ic_team" />

        </LinearLayout>


    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>